<resources>
    <string name="app_name">CityPulseAI</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="email_hint">Enter your email address</string>
    <string name="password_hint">Enter your password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button_desc">Back button</string>
    <string name="save_settings_button">Save Settings</string>

    <string name="notification_title">Notification</string>
    <string name="notification_subtitle">Set your notification</string>

    <string name="general_notifications_label">General Notifications</string>
    <string name="general_notification_icon_desc">General notification icon</string>

    <string name="sound_notifications_label">Sound Notifications</string>
    <string name="sound_notifications_icon_desc">Sound notifications icon</string>

    <string name="app_update_notifications_label">App Update Notifications</string>
    <string name="app_updates_icon_desc">App updates icon</string>
    <string name="home_tab_title">Home</string>
    <string name="insights_tab_title">Insights</string>
    <string name="analytics_tab_title">Analytics</string>
    <string name="profile_tab_title">Profile</string>
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID_HERE</string>
</resources>
